--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <groupId>io.smallrye.event-sourcing</groupId>
   <artifactId>smallrye-event-sourcing</artifactId>
   <version>0.0.10-SNAPSHOT</version>
-  <packaging>pom</packaging>
+  <packaging>jar</packaging>
 
   <name>Smallrye Event Sourcing</name>
   <description>An event sourcing proof of concept built on MicroProfile Reactive Messaging</description>
@@ -95,37 +95,4 @@
     </plugins>
   </build>
 
-  <profiles>
-    <profile>
-      <id>tck</id>
-      <modules>
-        <module>tck</module>
-      </modules>
-    </profile>
-    <profile>
-      <id>doc</id>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.asciidoctor</groupId>
-            <artifactId>asciidoctor-maven-plugin</artifactId>
-            <configuration>
-              <backend>html</backend>
-              <sourceHighlighter>highlightjs</sourceHighlighter>
-              <attributes>
-                <toc>left</toc>
-                <version>${project.version}</version>
-                <weld-version>${version.weld.core}</weld-version>
-                <smallrye-streams-version>${smallrye-reactive-streams-ops.version}</smallrye-streams-version>
-                <smallrye-config-version>${smallrye-config.version}</smallrye-config-version>
-              </attributes>
-              <sourceDirectory>doc</sourceDirectory>
-              <imagesDir>assets</imagesDir>
-            </configuration>
-          </plugin>
-        </plugins>
-        <defaultGoal>generate-resources asciidoctor:process-asciidoc</defaultGoal>
-      </build>
-    </profile>
-  </profiles>
 </project>
