--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>io.smallrye</groupId>
     <artifactId>smallrye-parent</artifactId>
-    <version>8-SNAPSHOT</version>
+    <version>7</version>
   </parent>
 
   <artifactId>smallrye-event-sourcing</artifactId>
